# tscomagcv-svn

trunk/: COPYING  Makefile.am  README  README.SVN  configure.ac
trunk/Makefile.rules/: Makefile.latex-rules
trunk/doc/: Makefile.am
trunk/doc/doc.html/: documentation.html  index.html
trunk/doc/doc.latex/: Makefile.am  data.bib  data.tex
trunk/m4/: ac_prog_grep.m4  ac_prog_md5sum.m4  acltx_koma_script.m4  acltx_prog_htlatex.m4  acltx_prog_pdflatex.m4
trunk/tools/: Makefile.am  configure.ac
trunk/tools/doc/: source.doxy
trunk/tools/kde3/kfile_metadat/: AUTHORS  Doxyfile  README.devel  README.svn  configure.in.in  kfile_metadat.kdevelop  kfile_metadat.spec
trunk/tools/kde3/kfile_metadat/admin/: buildrpm.sh
trunk/tools/kde3/kfile_metadat/doc/: Makefile.am
trunk/tools/kde3/kfile_metadat/doc/en/: Makefile.am  index.docbook
trunk/tools/kde3/kfile_metadat/po/: de.po  kfile_metadat.pot
trunk/tools/kde3/kfile_metadat/src/: Makefile.am  kfile_metadat.cpp  kfile_metadat.desktop  kfile_metadat.h  kfile_metadat.lsm  x-comag.desktop
trunk/tools/kde3/kfile_metadat/templates/: cpp
trunk/tools/source/: Makefile.am  comag_meta.cpp  comag_meta.h  meta_main.cpp
