#
# configure.ac
# Copyright (c) Markus Kohm, 2009
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; version 2 of the License.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#

AC_INIT([tscomagcv], [0.1], [mjk at users.berlios.de])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_MD5SUM
AC_PROG_GREP
ACLTX_PROG_PDFLATEX
ACLTX_PROG_MAKEINDEX
ACLTX_PROG_BIBTEX
AC_CONFIG_FILES([
	Makefile
	doc/Makefile
	doc/doc.latex/Makefile
])
AC_OUTPUT
